// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  className="ant-comment"
  id="default"
>
  <div
    className="ant-comment-inner"
  >
    <div
      className="ant-comment-avatar"
    >
      <span
        className="ant-avatar {\\"style\\":[{},null]} ant-avatar-circle"
        id="undefined_id"
        onClick={[Function]}
        style={Object {}}
      >
        <span
          className="ant-avatar-string"
          style={
            Object {
              "opacity": 0,
            }
          }
        />
      </span>
    </div>
    <div
      className="ant-comment-content"
    >
      <div
        className="ant-comment-content-detail"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.author - value[0] 1`] = `
<div
  className="ant-comment"
  id="properties.author"
>
  <div
    className="ant-comment-inner"
  >
    <div
      className="ant-comment-avatar"
    >
      <span
        className="ant-avatar {\\"style\\":[{},null]} ant-avatar-circle"
        id="undefined_id"
        onClick={[Function]}
        style={Object {}}
      >
        <span
          className="ant-avatar-string"
          style={
            Object {
              "opacity": 0,
            }
          }
        >
          Co
        </span>
      </span>
    </div>
    <div
      className="ant-comment-content"
    >
      <div
        className="ant-comment-content-author"
      >
        <span
          className="ant-comment-content-author-name"
        >
          Comment author
        </span>
      </div>
      <div
        className="ant-comment-content-detail"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.author 1`] = `true`;

exports[`Test Schema properties.author 2`] = `null`;
